--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="menu">
             <div class="logo">
-                <img src="/images/pngegg.png" alt="Gymlogo" />
+                <img src="images/pngegg.png" alt="Gymlogo" />
                 <h1>Power GYM</h1>
             </div>
             <div class="menu_btn">
@@ -43,7 +43,7 @@
         <h1><span>A</span>bout Us<span>.</span></h1>
         <div class="about_container">
             <div class="about_left">
-                <img src="/images/sushil-ghimire-5UbIqV58CW8-unsplash.jpg" alt="">
+                <img src="images/sushil-ghimire-5UbIqV58CW8-unsplash.jpg" alt="">
             </div>
             <div class="about_right">
                 <h2>Who are we?</h2>
@@ -64,7 +64,7 @@
                 <button class="btn">Buy now</button>
             </div>
             <div class="membership_right_col">
-                <img src="/images/fitness.jpg" alt="">
+                <img src="images/fitness.jpg" alt="">
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
             <div class="boxes">
                 <p>Yoga</p>
                 <div class="png_img">
-                    <img src="/images/yoga.webp" alt="">
+                    <img src="images/yoga.webp" alt="">
                 </div>
                 <div class="discription">
                     <em><q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, voluptates!</q></em>
@@ -108,7 +108,7 @@
             <div class="card">
                 <div class="image_section">
                     <div class="image">
-                        <img src="/images/anastase-maragos-7kEpUPB8vNk-unsplash.jpg" alt="">
+                        <img src="images/anastase-maragos-7kEpUPB8vNk-unsplash.jpg" alt="">
                     </div>
                 </div>
                 <div class="details_section">
@@ -120,7 +120,7 @@
             <div class="card">
                 <div class="image_section">
                     <div class="image">
-                        <img src="/images/hayley-kim-design-eot-ka5dM7Q-unsplash.jpg" alt="">
+                        <img src="images/hayley-kim-design-eot-ka5dM7Q-unsplash.jpg" alt="">
                     </div>
                 </div>
                 <div class="details_section">
@@ -132,7 +132,7 @@
             <div class="card">
                 <div class="image_section">
                     <div class="image">
-                        <img src="/images/john-fornander-TAZoUmDqzXk-unsplash.jpg" alt="">
+                        <img src="images/john-fornander-TAZoUmDqzXk-unsplash.jpg" alt="">
                     </div>
                 </div>
                 <div class="details_section">
@@ -144,7 +144,7 @@
             <div class="card">
                 <div class="image_section">
                     <div class="image">
-                        <img src="/images/dane-wetton-t1NEMSm1rgI-unsplash.jpg" alt="">
+                        <img src="images/dane-wetton-t1NEMSm1rgI-unsplash.jpg" alt="">
                     </div>
                 </div>
                 <div class="details_section">
@@ -160,22 +160,22 @@
         <div class="gallery_row">
             <div class="gallery_section">
                 <div class="images">
-                    <img src="/images/luis-vidal-FodEsaNZs48-unsplash.jpg" alt="">
+                    <img src="images/luis-vidal-FodEsaNZs48-unsplash.jpg" alt="">
                 </div>
                 <div class="images">
-                    <img src="/images/karsten-winegeart-0Wra5YYVQJE-unsplash.jpg" alt="">
+                    <img src="images/karsten-winegeart-0Wra5YYVQJE-unsplash.jpg" alt="">
                 </div>
                 <div class="images">
-                    <img src="/images/dane-wetton-t1NEMSm1rgI-unsplash.jpg" alt="">
+                    <img src="images/dane-wetton-t1NEMSm1rgI-unsplash.jpg" alt="">
                 </div>
                 <div class="images">
-                    <img src="/images/anastase-maragos-7kEpUPB8vNk-unsplash.jpg" alt="">
+                    <img src="images/anastase-maragos-7kEpUPB8vNk-unsplash.jpg" alt="">
                 </div>
                 <div class="images">
-                    <img src="/images/ale-romo-TdrUCJU6VFs-unsplash.jpg" alt="">
+                    <img src="images/ale-romo-TdrUCJU6VFs-unsplash.jpg" alt="">
                 </div>
                 <div class="images">
-                    <img src="/images/fitness.jpg" alt="">
+                    <img src="images/fitness.jpg" alt="">
                 </div>
             </div>
         </div>
